--- a/dakotatrophyadventures/public/index.html
+++ b/dakotatrophyadventures/public/index.html
@@ -8,6 +8,15 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PY4D0SSSDD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PY4D0SSSDD');
+</script>
         <!-- Start Single Page Apps for GitHub Pages -->
         <script type="text/javascript">
           // Single Page Apps for GitHub Pages
