--- a/dakotatrophyadventures/public/index.html
+++ b/dakotatrophyadventures/public/index.html
@@ -16,6 +16,8 @@
   gtag('js', new Date());
 
   gtag('config', 'G-PY4D0SSSDD');
+  gtag('config', 'G-M48KKZ3MB5');
+
 </script>
         <!-- Start Single Page Apps for GitHub Pages -->
         <script type="text/javascript">
