--- a/dakotatrophyadventures/public/index.html
+++ b/dakotatrophyadventures/public/index.html
@@ -6,8 +6,121 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Dakota Trophy Adventures - The Best Kept Secret Of Hunting In The West</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <!-- Google Fonts: Oswald for headings, Source Sans Pro for body -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+
+    <!-- Global Styles -->
+    <style>
+      :root {
+        --color-primary: #4A6741;
+        --color-secondary: #8B6914;
+        --color-accent: #B8860B;
+        --color-background: #F5F1E8;
+        --color-text: #2C2416;
+        --color-card: #FFFFFF;
+        --font-heading: 'Oswald', sans-serif;
+        --font-body: 'Source Sans Pro', sans-serif;
+      }
+
+      body {
+        font-family: var(--font-body);
+        background-color: var(--color-background);
+        color: var(--color-text);
+        margin: 0;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+
+      h1, h2, h3, h4, h5, h6 {
+        font-family: var(--font-heading);
+        font-weight: 600;
+        color: var(--color-text);
+      }
+
+      /* Animation Classes */
+      .fade-in-up {
+        opacity: 0;
+        transform: translateY(30px);
+        transition: opacity 0.6s ease, transform 0.6s ease;
+      }
+      .fade-in-up.visible {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      /* CTA Button Styles */
+      .cta-button {
+        background-color: var(--color-primary) !important;
+        color: white !important;
+        font-family: var(--font-heading) !important;
+        font-weight: 500 !important;
+        letter-spacing: 1px !important;
+        text-transform: uppercase !important;
+        min-height: 48px !important;
+        padding: 12px 32px !important;
+        border-radius: 4px !important;
+        transition: all 0.3s ease !important;
+      }
+      .cta-button:hover {
+        transform: scale(1.05);
+        box-shadow: 0 4px 12px rgba(74, 103, 65, 0.4);
+      }
+
+      /* Card hover effects */
+      .hover-lift {
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+      .hover-lift:hover {
+        transform: translateY(-8px);
+        box-shadow: 0 12px 24px rgba(0,0,0,0.15);
+      }
+
+      /* Nav link underline animation */
+      .nav-link-animated {
+        position: relative;
+      }
+      .nav-link-animated::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        height: 2px;
+        background-color: var(--color-secondary);
+        transition: width 0.3s ease;
+      }
+      .nav-link-animated:hover::after {
+        width: 100%;
+      }
+
+      /* Mobile adjustments */
+      @media (max-width: 768px) {
+        .fade-in-up {
+          opacity: 1;
+          transform: none;
+        }
+        .hover-lift:hover {
+          transform: none;
+          box-shadow: none;
+        }
+        .cta-button {
+          width: 100% !important;
+          padding: 16px 24px !important;
+          font-size: 18px !important;
+        }
+      }
+
+      /* Respect reduced motion preference */
+      @media (prefers-reduced-motion: reduce) {
+        *, *::before, *::after {
+          animation-duration: 0.01ms !important;
+          transition-duration: 0.01ms !important;
+        }
+      }
+    </style>
       <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PY4D0SSSDD"></script>
 <script>
