--- a/dakotatrophyadventures/public/index.html
+++ b/dakotatrophyadventures/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>img/logo.png">
+    <link rel="alternate icon" href="<%= BASE_URL %>favicon.ico">
     <title>Dakota Trophy Adventures - The Best Kept Secret Of Hunting In The West</title>
     <!-- Google Fonts: Oswald for headings, Source Sans Pro for body -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
